add query param to filter getMeasures by current user; ref #MAT-3812